fix mobile view overflow

--- a/src/css/login.css
+++ b/src/css/login.css
@@ -3,9 +3,9 @@
 .login-outline {
   padding: 10px;
 
-  width: 70vw;
-  height: 80vh;
-  
+  width: 80vw;
+  height: auto;
+
   background-color: #f6fdfd;
 
   border-radius: 5px;
@@ -20,7 +20,7 @@
 }
 
 .card {
-  height: 50vh;
+  height: auto;
 
   -webkit-box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.75);
   -moz-box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.75);
