--- a/src/css/main.css
+++ b/src/css/main.css
@@ -5,10 +5,8 @@ body, head {
   width: 100%;
   height: 100%;
 }
-
+  
 .centerBox {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
+  margin: 10vh auto;
 }
+
